# oglplus

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CHANGELOG  CMakeLists.txt  Makefile  Makefile.full  README.rst  README.txt  configure-oglplus  configure.bat  configure.py  configure.sh  install.sh
doc/doxygen/: CMakeLists.txt  Doxyfile.autohdr  Doxyfile.common  Doxyfile.oalplus  Doxyfile.oglplus  footer.html  header.html
doc/doxygen/eglplus/: CMakeLists.txt  Doxyfile.eglplus
doc/doxygen/oalplus/: CMakeLists.txt  Doxyfile.oalplus  oalplus.css
doc/doxygen/oglplus/: CMakeLists.txt  Doxyfile.oglplus
example/: CMakeLists.txt
example/advanced/: CMakeLists.txt
example/advanced/cloud_trace/: CMakeLists.txt  app_data.cpp  app_data.hpp  arg_parser.cpp  arg_parser.hpp  cloud_data.cpp  cloud_data.hpp  copier.cpp  copier.hpp  copier_default.cpp  copier_default.hpp  example_main.hpp  main_GLFW.cpp  main_GLX.cpp  main_common.cpp  main_common.hpp  programs.cpp  programs.hpp  ray_matrix.cpp  ray_matrix.hpp  raytracer.cpp  raytracer.hpp  render_data.cpp  render_data.hpp  renderer.cpp  renderer.hpp  resources.cpp  resources.hpp  saver.cpp  saver.hpp  textures.cpp  textures.hpp  threads.cpp  threads.hpp
example/advanced/cloud_trace/glsl/: decode.fs.glsl  encode.fs.glsl  raysample.fs.glsl  raytrace.fs.glsl  raytrace.vs.glsl  render-age.fs.glsl  render-density.fs.glsl  render-dist_final.fs.glsl  render-dist_first.fs.glsl  render-light_pri.fs.glsl  render-light_sec.fs.glsl  render-rawdata.fs.glsl  render-simple.fs.glsl  render-simple_w_dist.fs.glsl  render-sun_sky.fs.glsl  render.fs.glsl  render.vs.glsl
example/advanced/cloud_trace/tools/: CMakeLists.txt  blender2csv.cpp
example/advanced/spectra/: CMakeLists.txt  calculator.cpp  calculator.hpp  calculator_cpu.cpp  calculator_gpu.cpp  coroutine.cpp  coroutine.hpp  default_renderer.cpp  document.cpp  document.hpp  document_canvas.cpp  document_frame.cpp  document_frame.hpp  document_view.cpp  document_view.hpp  document_with_calc.cpp  document_with_calc.hpp  main_frame.cpp  main_frame.hpp  openal_document.cpp  openal_document.hpp  renderer.cpp  renderer.hpp  shared_objects.cpp  shared_objects.hpp  spectra_app.cpp  spectra_app.hpp  visualisation.cpp  visualisation.hpp  xsection_renderer.cpp
example/advanced/spectra/glsl/: default_doc_vis.fs.glsl  default_doc_vis.prog.txt  default_doc_vis.vs.glsl  default_vis_cue.fs.glsl  default_vis_cue.vs.glsl  xfb_matrix_transf.vs.glsl  xsection.fs.glsl  xsection.vs.glsl
example/android/: AndroidManifest.xml
example/android/001_triangle/jni/: triangle.cpp
example/android/jni/: Android.mk  android_001_triangle.cpp
example/android/res/values/: strings.xml
example/bindings/python/: 001_egl_info.py  001_oal_devices.py  001_oal_hello.py  001_oal_info.py  001_ogl_vector.py  002_egl_configurations.py  003_egl_configurations.py
example/eglplus/: 001_string_queries.cpp  002_configurations.cpp  003_configurations.cpp  CMakeLists.txt
example/oalplus/: 001_devices.cpp  001_hello.cpp  001_info.cpp  002_hello_path.cpp  CMakeLists.txt
example/oglplus/: 001_texgen.cpp  001_triangle.cpp  001_triangle_glsl120.cpp  002_rect.cpp  002_shader_lit.cpp  002_triangle.cpp  003_rect.cpp  003_triangle.cpp  004_mandelbrot.cpp  004_newton.cpp  004_rect.cpp  005_mandelbrot.cpp  006_cartoon_sun.cpp  006_newton_zoom.cpp  007_cubic_bezier.cpp  007_voronoi.cpp  008_lyapunov.cpp  009_metaballs.cpp  010_cmy_cube.cpp  010_cmy_cube_glsl120.cpp  010_rgb_cube.cpp  011_writing.cpp  012_checker_cube.cpp  012_checker_sphere.cpp  013_spiral_sphere.cpp  013_striped_cubes.cpp  014_multi_cube.cpp  014_multi_cube_gs.cpp  014_multi_cube_ssbo.cpp  014_multi_cube_ub.cpp  015_graph.cpp  015_obj_mesh.cpp  015_shaded_cube.cpp  016_cartoon_torus.cpp  016_metallic_torus.cpp  016_noise_torus.cpp  016_textured_cube.cpp  016_textured_cube_glsl120.cpp  017_blender_mesh.cpp  017_clipped_torus.cpp  (+120 more)
example/oglplus/dependencies/: PNG.txt  egl_main.txt  glfw3_main.txt  glfw_main.txt  glut_main.txt  glx_main.txt  qtgl_main.txt  sdl_main.txt  wxgl_main.txt
example/oglplus/requirements/: 000_test.gl.txt  017_single_pass_edges.gl.txt  020_golf_ball.gl.txt  025_rendered_texture_mt.cpp.txt  028_depth_map_sss.gl.txt  030_rain.gl.txt  041_blob_mt.cpp.txt  041_blob_mt.gl.txt  CHRONO.txt  FUNCTION_TEMPLATE_DEFAULT_ARGS.txt  INITIALIZER_LISTS.txt  LAMBDAS.txt  USER_DEFINED_LITERALS.txt  VARIADIC_TEMPLATES.txt
example/oglplus/resources/: 019_honeycomb_cube.tex.txt  034_billiard_balls.tex.txt
example/standalone/: 000_test.cpp  000_text_rendering.cpp  001_ati_meminfo.cpp  001_gl_info.cpp  001_gl_limits.cpp  001_hello_glut_glew.cpp  001_program_resources.cpp  001_shape2dot.cpp  001_text2d.cpp  001_triangle_glut_gles3.cpp  001_triangle_glut_glew.cpp  001_triangle_screenshot.cpp  001_triangle_sdl_glew.cpp  001_triangle_wxgl_glew.cpp  002_amd_perf_monitor.cpp  002_dsa_buffer.cpp  002_rectangle_glut_glew.cpp  002_simple_path.cpp  002_triangle_compatibility.cpp  002_triangles_glfw3_glew.cpp  003_dsa_texture.cpp  003_simple_text.cpp  004_any_text_rendering.cpp  004_bitmap_text_hello.cpp  004_bitmap_text_rendering.cpp  004_pango_cairo_hello.cpp  004_stbttf_text_rendering.cpp  004_text_rendering.cpp  007_glm_boxes.cpp  010_blender2html.cpp  020_oglplus_oalplus.cpp  024_blender_mesh_loader.cpp  025_bitmap_font_text.cpp  026_blender_mesh_loader.cpp  029_mandelbrot_glfw3.cpp  CMakeLists.txt  glut_glew_example.hpp
source/bindings/python/: CMakeLists.txt  eglplus.cpp  oalplus.cpp  oglplus.cpp
source/bindings/python/eglplus/: _enums_call.ipp  _enums_decl.ipp  _py_range_adapt.hpp  attrib_list.hpp  (+31 more)
source/lib/oglplus/: CMakeLists.txt  debug.cpp  debug_output.cpp  enums.cpp  error.cpp  extension.cpp  images_base.cpp  images_load.cpp  native.cpp  obj_desc.cpp  object.cpp  object_dsa.cpp  opt.cpp  prog_var.cpp  program.cpp  prologue.ipp  shader.cpp  shapes_base.cpp  shapes_blender.cpp  shapes_obj.cpp  shapes_utils.cpp  string.cpp  text.cpp
utils/eglplus/egl/: CMakeLists.txt
xslt/: ARB_d_o_xml2tree.xsl  CMakeLists.txt  bound_hpp.xsl  gl_xml_version_check.xsl
(+3680 files in other folders)
